Fix sun misalignment

--- a/src/styles/components/highlight/index.less
+++ b/src/styles/components/highlight/index.less
@@ -10,7 +10,7 @@
 
   img {
     position: absolute;
-    top: 85px; // @todo Work out how to position this without the margin from other elements
+    top: 65px; // @todo Work out how to position this without the margin from other elements
     left: @highlight-image-offset-px;
     height: @highlight-image-size-px;
     width: @highlight-image-size-px;
